syntax = "proto3";

package shops;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.shops";

service ShopService {
  rpc GetShopById(GetShopByIdRequest) returns (GetShopByIdResponse);
}

message GetShopByIdRequest {
  string shop_id = 1;
}
message ShopResponse {
  string id = 1;
  string owner_id = 2;
  string name = 3;
  string description = 4;
  int32 num_of_products = 5;
  int32 num_of_followers = 6;
  float rating_avg = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message GetShopByIdResponse {
  ShopResponse shop = 1;
}
